lang/tests/contract/ui/fail/49-invalid-state-type.stderr
error[E0277]: the trait bound `u32: You_Should_Use_A_Container_To_Wrap_Your_State_Field_In_Storage` is not satisfied
  --> $DIR/49-invalid-state-type.rs:12:12
   |
12 |         u: u32,
   |            ^^^ the trait `You_Should_Use_A_Container_To_Wrap_Your_State_Field_In_Storage` is not implemented for `u32`

error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_State_Type` is not satisfied
  --> $DIR/49-invalid-state-type.rs:13:12
   |
13 |         f: storage::IterableMapping<u32, f32>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `You_Should_Use_An_Valid_State_Type` is not implemented for `f32`
